// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footer components snapshots component 1`] = `
<div
  className="footer-container not-for-print"
>
  <footer
    className="footer"
  >
    <ul
      className="social-links-footer"
    >
      <li
        className="link"
      >
        <a
          className="github"
          href="https://github.com/cbillowes"
          rel="nofollow noopener noreferrer "
          target="_blank"
        />
      </li>
      <li
        className="link"
      >
        <a
          className="twitter"
          href="https://twitter.com/cbillowes"
          rel="nofollow noopener noreferrer "
          target="_blank"
        />
      </li>
      <li
        className="link"
      >
        <a
          className="linkedin"
          href="https://www.linkedin.com/in/cbouwer/"
          rel="nofollow noopener noreferrer "
          target="_blank"
        />
      </li>
    </ul>
    <div
      className="copyright-footer"
    >
      Copyright © 
      
      2019
       
      
      Curious Programmer
      . 
      
      Made with Gatsby v2 and other 
      
      <a
        href="/credits"
        onClick={[Function]}
        onMouseEnter={[Function]}
      >
        cool stuff
      </a>
      .
    </div>
    <div
      className="license-footer"
    >
      <span
        className="license"
      >
        <a
          className="license-icon"
          href="http://creativecommons.org/licenses/by-sa/4.0/"
          rel="nofollow noopener noreferrer license"
          target="_blank"
        >
          <img
            alt="Creative Commons License"
            src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"
            title="Creative Commons Attribution-ShareAlike 4.0 International License"
          />
        </a>
        <p>
          <span
            property="dct:title"
            xmlns:dct="http://purl.org/dc/terms/"
          >
             
            Curious Programmer
             content
             
          </span>
           
          by
           
          <a
            className=""
            href="https://curiousprogrammer.io"
            rel="nofollow noopener noreferrer cc:attributionURL"
            target="_blank"
          >
            Clarice Bouwer
          </a>
           
          is licensed under a
           
          <a
            className=""
            href="http://creativecommons.org/licenses/by-sa/4.0/"
            rel="nofollow noopener noreferrer license"
            target="_blank"
          >
            Creative Commons Attribution-ShareAlike 4.0 International License
          </a>
          .
        </p>
      </span>
       
      <p>
        Also, there is a
         
        <a
          href="/license"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          License
        </a>
         for the code 
        and it's probably a good idea to read the
         
        <a
          href="/privacy-policy"
          onClick={[Function]}
          onMouseEnter={[Function]}
        >
          Privacy Policy
        </a>
        .
      </p>
    </div>
  </footer>
</div>
`;

exports[`footer components snapshots copyright 1`] = `
<div
  className="copyright-footer"
>
  Copyright © 
  
  2019
   
  
  Curious Programmer
  . 
  
  Made with Gatsby v2 and other 
  
  <a
    href="/credits"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    cool stuff
  </a>
  .
</div>
`;

exports[`footer components snapshots license 1`] = `
<div
  className="license-footer"
>
  <span
    className="license"
  >
    <a
      className="license-icon"
      href="http://creativecommons.org/licenses/by-sa/4.0/"
      rel="nofollow noopener noreferrer license"
      target="_blank"
    >
      <img
        alt="Creative Commons License"
        src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"
        title="Creative Commons Attribution-ShareAlike 4.0 International License"
      />
    </a>
    <p>
      <span
        property="dct:title"
        xmlns:dct="http://purl.org/dc/terms/"
      >
         
        Curious Programmer
         content
         
      </span>
       
      by
       
      <a
        className=""
        href="https://curiousprogrammer.io"
        rel="nofollow noopener noreferrer cc:attributionURL"
        target="_blank"
      >
        Clarice Bouwer
      </a>
       
      is licensed under a
       
      <a
        className=""
        href="http://creativecommons.org/licenses/by-sa/4.0/"
        rel="nofollow noopener noreferrer license"
        target="_blank"
      >
        Creative Commons Attribution-ShareAlike 4.0 International License
      </a>
      .
    </p>
  </span>
   
  <p>
    Also, there is a
     
    <a
      href="/license"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      License
    </a>
     for the code 
    and it's probably a good idea to read the
     
    <a
      href="/privacy-policy"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Privacy Policy
    </a>
    .
  </p>
</div>
`;

exports[`footer components snapshots social links 1`] = `
<ul
  className="social-links-footer"
>
  <li
    className="link"
  >
    <a
      className="github"
      href="https://github.com/cbillowes"
      rel="nofollow noopener noreferrer "
      target="_blank"
    />
  </li>
  <li
    className="link"
  >
    <a
      className="twitter"
      href="https://twitter.com/cbillowes"
      rel="nofollow noopener noreferrer "
      target="_blank"
    />
  </li>
  <li
    className="link"
  >
    <a
      className="linkedin"
      href="https://www.linkedin.com/in/cbouwer/"
      rel="nofollow noopener noreferrer "
      target="_blank"
    />
  </li>
</ul>
`;
